--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -14,8 +14,17 @@ body{
     font-size: 12px;
     width: 100vw;
     height: 100vh;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }   
+::-webkit-scrollbar{
+    background-color: var(--black-ebony);
+    width: 8px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--black-jet);
+    border-radius: 10px;
+}
 div#main-content{
     width: 100vw;
 }
@@ -104,9 +113,8 @@ div.sidebar a:hover{
 }
 section.section-welcome{
     width: 100%;
-    height: 70vh;
-    background-image: url(/paginas/home/images-home/Cópia\ de\ RH\ -\ TREINAMENTO.jpg);
-    filter: brightness(50%);
+    height: 40vh;
+    background-color: gold;
     background-size: cover;
     background-position: top;
     object-fit: cover;
@@ -117,7 +125,8 @@ section.section-welcome{
 }
 div.texts-welcome{
     max-width: 70vw;
-    font-size: max(20px,1.5vw);   
+    font-size: 1.5vw;   
+    color: #000;
 }
 @media (max-width:820px){
     .texts-welcome{
@@ -131,6 +140,7 @@ div.texts-welcome{
     color: #fff;
     font-size: max(20px,3vw);
     font-weight: 500;    
+    color: #000;
 }
 @media (max-width:450px){
         .user-info{
@@ -190,3 +200,75 @@ main .blogs-container {
     margin: auto;
     
 }
+
+section.container-slide{
+    width: 100vw;
+    height: 520px;
+    border-radius: 20px;
+    box-shadow: 0 5px 10px var(--grey-dark);
+}
+.slides{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+.slides input{
+    display: none;
+}
+.imagens{
+    width: 25%;
+    transition: 0.2s;
+    position: absolute;
+}
+.imagens img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+.carrossel{
+    width: 100%;
+    height: 100%;
+    margin-top: 40px;
+ }
+ .botoes-carrossel{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 20px;
+    
+ }
+ .botoes-carrossel .botao{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid transparent;
+    border-color: white;
+    cursor: pointer;
+    background-color: rgb(80, 80, 80);
+    padding: 8px;
+ }
+ .botoes-carrossel .botao.selecionado{
+    background-color: goldenrod;
+ }
+/* Adiciona uma transição suave para as imagens */
+.imagem {
+    opacity: 0;
+    transition: 0.2s;
+    width: 50%;
+    object-fit: cover;
+    height: 55vh;
+    display: none;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.imagem.ativa {
+    display: block;
+    opacity: 1; /* Quando ativa, a opacidade vai para 1 */
+}
+
+
