--- a/paginas/treinamento/modulos/modulos.css
+++ b/paginas/treinamento/modulos/modulos.css
@@ -10,7 +10,8 @@ body{
     background-color: #04051D;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 header div.icon-exit{
     width: 100%;
@@ -40,8 +41,8 @@ article#Training-Box{
     background-color: #111111;
     color: #fff;
     border-radius: 15px;
-    margin: auto;
     width: max(300px,20vw);
+    
 } 
 img#curso-imagem{
     width: 100%;
@@ -98,3 +99,56 @@ h2#curso-titulo{
 p#curso-descricao{
     padding-left: 20px;
 }
+div.div-father{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 50px;
+}
+div.texts-modules{
+    background-color: rgb(24, 24, 24);
+    color: #fff;
+    width: 17vw;
+    height: 450px;
+    padding: 0;
+    border-radius: 5px;
+    overflow-x: hidden;
+}
+div.texts-modules h3{
+    border-bottom: grey solid 1px;
+    padding: 10px;
+}
+div.texts-modules li{
+    border-bottom: grey solid 1px;
+    padding: 10px;
+}
+::-webkit-scrollbar{
+    background: #202020; /* Cor da parte que você arrasta */
+    border-radius: 5px; /* Bordinhas arredondadas */
+    width: 5px;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: gold;
+    border-radius: 5px;
+  }
+  @media (max-width:1000px){
+    div.div-father{
+        flex-direction: column;
+        padding: 20px;
+        gap: 1rem;
+    }
+    div.texts-modules{
+        width: 100%;
+    }
+    body::-webkit-scrollbar{
+        background: #101010; /* Cor da parte que você arrasta */
+        border-radius: 10px; /* Bordinhas arredondadas */
+        width: 5px;
+      }
+      body::-webkit-scrollbar-thumb{
+        background-color: #303030;
+      }
+      article#Training-Box{
+        width: 100%;
+      }
+  }
