--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -10,27 +10,18 @@
 }
 
 body{
-    background: #ffffff;
     color: #04051D;
     font-size: 12px;
     width: 100vw;
     height: 100vh;
-    overflow-y: auto;
+    overflow: auto;
     overflow-x: hidden;
 }   
-::-webkit-scrollbar{
-    background-color: var(--black-ebony);
-    width: 8px;
-}
-::-webkit-scrollbar-thumb{
-    background-color: var(--black-jet);
-    border-radius: 10px;
-}
 div#main-content{
     width: 100vw;
 }
 header .container-header{
-    background-color: #04051D;
+    background-color: var(--blue-body);
     width: 100%;
     height: 180px;
     display: flex;
@@ -39,25 +30,65 @@ header .container-header{
     align-items: center;
     z-index: 2;
     padding: 40px;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .container-header .nav-home {
     font-size: 20px;
     display: flex;
     justify-content: space-evenly;
     width: 50%;
+    background-color: var(--black-ink);
+    padding: 20px;
+    border-radius: 10px;
 }
 .container-header .nav-home a {
     display: flex;
-    color: #fff;
+    color: var(--white);
+    z-index: 2;
 }
 .container-header .nav-home a:hover{
     filter: brightness(70%);
     transition: 0.3s ease;
 }
+.nav-home span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(45deg, #4f1919, red);
+    border-radius: 10px;
+
+}
 
 .icon-menu img{
     display: none;
 }
+@keyframes showsidebar{
+    from{
+        transform: translateX(300px);
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+div.sidebar{
+    animation: showsidebar 1.4s ease both;
+    transform: translateX(150px);
+}
+
+/* Animação de saída */
+@keyframes hidesidebar {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(300px);
+    }
+}
+
+
 @media screen and  (max-width: 900px){
     header .container-header{
         justify-content: space-between;
@@ -73,11 +104,14 @@ header .container-header{
 
 div.icon-exit a{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    color: red;
+    color: var(--black);
     font-size: 20px;
+    background-color: var(--gold);
+    padding: 20px;
+    border-radius: 10px;
 }
 div.icon-exit a:hover{
     filter: brightness(70%);
@@ -95,7 +129,7 @@ div.sidebar{
     right: 0;
     height: 100vh;
     width: 250px;
-    background-color: black;
+    background-color: var(--black);
     display: none;
     gap: 50px;
     align-items: center;
@@ -105,41 +139,40 @@ div.sidebar{
 div.sidebar a{
     width: 100%;
     margin-top: 50px;
-    color: #fff;
+    color: var(--white);
     padding: 10px;
     font-size: 23px;
 }
 div.sidebar a:hover{
     filter: brightness(20%);
 }
-section {
+section.section-welcome{
     width: 100%;
-    height: 40vh;
-    background-color: gold;
-    background-size: cover;
-    background-position: top;
-    object-fit: cover;
+    height: 30vh;
+    background-color: var(--gold);
     display: flex;
     align-items: center;
     flex-direction: column;
-    color: #fff;
+    color: var(--white);
+    margin-top: 180px;
 }
 div.texts-welcome{
+    color: var(--black);
     max-width: 70vw;
-    font-size: 1.5vw;   
-    color: #000;
+    font-size: max(20px,1.5vw);   
 }
-@media (max-width:450px){
+@media (max-width:820px){
     .texts-welcome{
         display: none;
     }
+    section.section-welcome{
+        height: auto;
+    }
 }
 .user-info{
-    color: #fff;
+    color: var(--black);
+    font-size: max(20px,3vw);
     font-weight: 500;    
-    color: #000;
-    font-size: 2vw;
-    margin-left: 17.5vw;    
 }
 @media (max-width:450px){
         .user-info{
@@ -165,9 +198,9 @@ main .blogs-container{
     text-align: center;
 }*/
 .blog-content {
-    background-color: #04051D;
+    background-color: var(--blue-body);
     border-radius: 10px;
-    color: #fff;
+    color: var(--white);
     text-align: center;
     margin: auto;
     width: 250px;
@@ -191,15 +224,14 @@ main h1{
 main{
     padding: 0 0 80px 0;
 }
-
 main .blogs-container {
     display: grid ;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(300px, 3fr)); 
     gap: 4.8rem;
-    max-width: 1200px;
-    margin: auto;   
+    max-width: 1500px;
+    margin: auto;
+    
 }
-
 section.container-slide{
     width: 100vw;
     height: 520px;
@@ -219,47 +251,36 @@ section.container-slide{
     transition: 0.2s;
     position: absolute;
 }
-.imagens img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-
-
 .carrossel{
-    width: 100%;
+    width: 100vw;
     height: 100%;
-    margin-top: 40px;
  }
  .botoes-carrossel{
     display: flex;
     gap: 20px;
     justify-content: center;
     margin-top: 20px;
-    
  }
  .botoes-carrossel .botao{
     width: 15px;
     height: 15px;
     border-radius: 50%;
     border: 2px solid transparent;
-    border-color: white;
+    border-color: var(--white);
     cursor: pointer;
-    background-color: rgb(80, 80, 80);
+    background-color: var(--gray);
     padding: 8px;
  }
  .botoes-carrossel .botao.selecionado{
-    background-color: goldenrod;
+    background-color: var(--gold-dark);
  }
 /* Adiciona uma transição suave para as imagens */
 .imagem {
     opacity: 0;
     transition: 0.2s;
-    width: 50%;
+    width: 100%;
+    height: 70vh;
     object-fit: cover;
-    height: 55vh;
     display: none;
     margin: auto;
     border-radius: 10px;
@@ -269,5 +290,4 @@ section.container-slide{
     display: block;
     opacity: 1; /* Quando ativa, a opacidade vai para 1 */
 }
-
 
