--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -39,7 +39,6 @@ header .container-header{
     display: flex;
     justify-content: space-evenly;
     width: 50%;
-    background-color: var(--black-ink);
     padding: 20px;
     border-radius: 10px;
 }
@@ -52,16 +51,6 @@ header .container-header{
     filter: brightness(70%);
     transition: 0.3s ease;
 }
-.nav-home span{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: linear-gradient(45deg, #4f1919, red);
-    border-radius: 10px;
-
-}
-
 .icon-menu img{
     display: none;
 }
@@ -77,7 +66,6 @@ div.sidebar{
     animation: showsidebar 1.4s ease both;
     transform: translateX(150px);
 }
-
 /* Animação de saída */
 @keyframes hidesidebar {
     from {
@@ -87,12 +75,10 @@ div.sidebar{
         transform: translateX(300px);
     }
 }
-
-
-@media screen and  (max-width: 900px){
-    header .container-header{
-        justify-content: space-between;
-        padding: 14px;
+@media screen and  (max-width: 1330px){
+    .container-header .nav-home{
+        justify-content: center;
+        padding: 0;
     }
     .hideOnMobile{
         display: none !important; 
@@ -101,7 +87,6 @@ div.sidebar{
         display: block;
     }
 }
-
 div.icon-exit a{
     display: flex;
     flex-direction: row;
@@ -113,6 +98,11 @@ div.icon-exit a{
     padding: 20px;
     border-radius: 10px;
 }
+@media (max-width: 500px){
+    div.icon-exit a{
+        display: none;
+    }
+}
 div.icon-exit a:hover{
     filter: brightness(70%);
     transition: 0.3s ease;
@@ -122,7 +112,6 @@ div.icon-exit img{
     margin-right: 10px;
     transform: rotate(179.5deg);
 }
-
 div.sidebar{ 
     position: fixed;
     top: 0;
@@ -131,10 +120,11 @@ div.sidebar{
     width: 250px;
     background-color: var(--black);
     display: none;
-    gap: 50px;
+    gap: 25px;
     align-items: center;
     flex-direction: column;
     text-align: center;
+    z-index: 1000;
 }
 div.sidebar a{
     width: 100%;
@@ -148,7 +138,7 @@ div.sidebar a:hover{
 }
 section.section-welcome{
     width: 100%;
-    height: 30vh;
+    height: 15vh;
     background-color: var(--gold);
     display: flex;
     align-items: center;
@@ -156,10 +146,10 @@ section.section-welcome{
     color: var(--white);
     margin-top: 180px;
 }
-div.texts-welcome{
+div.texts-welcome P{
     color: var(--black);
     max-width: 70vw;
-    font-size: max(20px,1.5vw);   
+    font-size: max(20px,1.5vw);
 }
 @media (max-width:820px){
     .texts-welcome{
